Contruir layout das Views

--- a/login.html
+++ b/login.html
@@ -17,9 +17,27 @@
                     <img class="img" src="/img/healthtrack-slogan.png" alt="Logo">
                 </div>
             </header>
+            <section class="row container--form-login">
+                <div class="col-md-offset-4 col-md-4 box--form-login">
+                    <form action="dashboard.html" method="post">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="ex: example@example.com.br">
+                        </div>
+                            <div class="form-group">
+                            <label for="pwd">Senha</label>
+                            <input type="password" class="form-control" id="pwd" placeholder="Digite sua senha">
+                            <a class="link--remind-password" href="novaSenha.html" title="Esqueceu a senha?">Esqueci minha senha</a>
+                        </div>
+                        <div class="checkbox">
+                            <label><input type="checkbox">Lembrar-me</label>
+                        </div>
+                    </form>
+                </div>
+            </section>
             <section class="row container--create-account">
                 <div class="col-md-offset-4 col-md-4 box--create-account">
-                    <a href="login.html" title="Acessar">
+                    <a href="dashboard.html" title="Acessar">
                         <button type="button" class="btn btn-success">login</button>
                     </a>
                 </div>
@@ -27,8 +45,8 @@
 
             <section class="row container--create-account">
                 <div class="col-md-offset-4 col-md-4 box--create-account">
-                    <a href="cadastro.html" title="Cadastrar">
-                        <button type="button" class="btn btn-success">sign up</button>
+                    <a href="index.html" title="Cadastrar">
+                        <button type="button" class="btn btn-success">sair</button>
                     </a>
                 </div>
             </section>
