Ajustar informações do dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -54,7 +54,6 @@
                         <li class="drop-item-menu">
                             <span>Como estou?</span>
                         </li>
-                        <li class="item-menu drop-item-menu">
                             
                         <a href="login.html" title="Logout" class="drop-item-menu">
                             <span>Sair</span>
@@ -95,7 +94,7 @@
                             <div class="box--user-informations-line">
                                 <span>
                                     IMC atual <strong id="imc">20.2 kg/m2</strong><br>
-                                    Classificação: <strong id="data-imc">Normalc</strong>
+                                    Classificação: <strong id="data-imc">Normal</strong>
                                 </span>
                             </div>
                         </div>
